<?xml version="1.0" encoding="utf-8"?>
<!--..............................................................................................................................
  . Copyright (c)
  .
  . The players_view.xml	 Class was Coded by : Alexandre BOLOT
  .
  . Last Modified : 01/10/17 22:28
  .
  . Contact : bolotalex06@gmail.com
  .............................................................................................................................-->

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:srcCompat="@android:drawable/ic_input_add"
            android:id="@+id/imgBtnAdd"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton"/>

    <TextView
            android:text="@string/gui_joueurs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="textCapSentences"
            android:ems="10"
            android:id="@+id/txtName"
            android:hint="@string/gui_nom"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toRightOf="@+id/radioGroup"
            app:layout_constraintRight_toLeftOf="@+id/imgBtnAdd"
            android:layout_marginRight="0dp"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/radioGroup"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton"
            >

        <RadioButton
                android:text="@string/gui_homme"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/radioBtnMale"
                />

        <RadioButton
                android:text="@string/gui_femme"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/radioBtnFemale"
                />
    </RadioGroup>

    <Button
            android:text="@string/gui_jouons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnReady"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"/>

    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/listViewPlayers"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtName"/>

    <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textOff="@string/gui_ordre_cyclique"
            android:textOn="@string/gui_ordre_aleatoire"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>